--- a/index.html
+++ b/index.html
@@ -409,10 +409,9 @@ function play() {
   const btn  = document.getElementById('rewardBtn');
   const panel= document.getElementById('rewardPanel');
   btn.onclick = () => panel.style.display = panel.style.display === 'block' ? 'none' : 'block';
-</script>
-<!-- ✅ 今日访问 -->
+<!-- ✅ 今日访问（300-500 假数据包） -->
 <div id="todayBox" style="position:fixed;top:60px;left:15px;background:rgba(0,0,0,.7);color:#e5e5e5;padding:6px 12px;border-radius:15px;font-size:13px;z-index:9999;">
-  <span>📅 今日访问人数：</span><span id="todayCount">0</span>
+  <span>📅 今日访问：</span><span id="todayCount">0</span>
 </div>
 
 <script>
@@ -421,19 +420,18 @@ function play() {
   const baseKey = todayKey + '_base';
 
   let real = parseInt(localStorage.getItem(todayKey) || '0', 10);
-  real += 1;
+  real += 1;                                      // 真人+1
   localStorage.setItem(todayKey, real);
 
   let base = parseInt(localStorage.getItem(baseKey) || '0', 10);
-  if (base === 0) {
-    base = 500 + Math.floor(Math.random() * 501);
+  if (base === 0) {                               // 第一次进今天
+    base = 300 + Math.floor(Math.random() * 201); // 300-500
     localStorage.setItem(baseKey, base);
   }
 
-  // 直接显示当前值
   document.getElementById('todayCount').textContent = real;
 
-  // 后台均匀涨：每 30-60 秒涨 1 次，8 小时内涨完
+  // 后台均匀涨：8 小时内涨完（每 30-60 秒涨 1 次）
   const need = base - real;
   if (need > 0) {
     const gap = (8 * 3600 * 1000) / need;
