--- a/index.html
+++ b/index.html
@@ -409,6 +409,9 @@ function play() {
   const btn  = document.getElementById('rewardBtn');
   const panel= document.getElementById('rewardPanel');
   btn.onclick = () => panel.style.display = panel.style.display === 'block' ? 'none' : 'block';
+<script>
+
+<script>
 <!-- ✅ 今日访问（300-500 包，已修不显示 bug） -->
 <div id="todayBox" style="position:fixed;top:60px;left:15px;background:rgba(0,0,0,.7);color:#e5e5e5;padding:6px 12px;border-radius:15px;font-size:13px;z-index:9999;">
   <span>📅 今日访问：</span><span id="todayCount">0</span>
