--- a/index.html
+++ b/index.html
@@ -256,6 +256,9 @@ window.addEventListener('DOMContentLoaded',()=>{
           <option value="https://jx.xymp4.cc/?url=">VIP视频解析④</option>
           <option value="https://api.quanminjiexi.com/index.php?url=">VIP视频解析⑤</option>
           <option value="http://v9j.net/?url=">VIP视频解析⑥</option>
+<option value="https://jx.jsonplayer.com/player/?url=">极速解析⑦</option>
+<option value="https://jx.bpba.cc/?url=">稳定解析⑧</option>
+
           </select>
         </div>
         <div class="input-group-btn">
