--- a/index.html
+++ b/index.html
@@ -387,6 +387,7 @@ function play() {
     document.getElementById('palybox').src = jk + encodeURIComponent(url);
 }
 </script>
+</script>
 <!-- ✅ 打赏作者 - 右上角悬浮 -->
 <div id="reward" style="position:fixed;top:60px;right:15px;z-index:9999;text-align:center;">
 
