--- a/index.html
+++ b/index.html
@@ -377,14 +377,14 @@ head.appendChild(script);
 <script>function fuckyou(){window.close();window.location="about:blank"}function ck(){console.profile();console.profileEnd();if(console.clear){console.clear()};if(typeof console.profiles=="object"){return console.profiles.length>0}}function hehe(){if((window.console&&(console.firebug||console.table&&/firebug/i.test(console.table())))||(typeof opera=='object'&&typeof opera.postError=='function'&&console.profile.length>0)){fuckyou()}if(typeof console.profiles=="object"&&console.profiles.length>0){fuckyou()}}hehe();window.onresize=function(){if((window.outerHeight-window.innerHeight)>200)fuckyou()}</script>
 <script>
 function play() {
-    var url = document.getElementById('url').value;
-    if (!url) {
-        alert('请输入视频地址！');
-        return;
-    }
-    var jk = document.getElementById('jk').value;
-    document.getElementById('tittext').innerHTML = url;
-    document.getElementById('palybox').src = jk + encodeURIComponent(url);
+  let url = document.getElementById('url').value.trim();
+  if (!url) { alert('请输入视频地址！'); return; }
+  // ① 净化：去掉 ? 及后面所有参数
+  url = url.split('?')[0];
+  // ② 强制用最新可用接口（直接复制）
+  const jk = 'https://jx.jsonplayer.com/player/?url=';
+  document.getElementById('tittext').innerHTML = url;
+  document.getElementById('palybox').src = jk + encodeURIComponent(url);
 }
 </script>
 </script>
