--- a/index.html
+++ b/index.html
@@ -248,18 +248,22 @@ window.addEventListener('DOMContentLoaded',()=>{
     <div class="url-box">
       <div class="input-group">
         <input type="text" id="url" class="form-control url-text" aria-label="Text input with segmented button dropdown" placeholder="请粘贴视频网址>ㅂ<ﾉ ☆" title="请复制你想要看的视频网址，粘贴到此处点击播放即可！">
-        <div class="input-group-addon">
-          <select class="url-c url-text" title="如发现视频无法正常播放请尝试更换视频线路！" id="jk">
-          <option value="https://jx.2s0.cn/player/?url=">默认解析端口①</option>
-          <option value="https://jx.xmflv.cc/?url=">VIP视频解析②</option>
-          <option value="https://jx.77flv.cc/?url=">VIP视频解析③</option>
-          <option value="https://jx.xymp4.cc/?url=">VIP视频解析④</option>
-          <option value="https://api.quanminjiexi.com/index.php?url=">VIP视频解析⑤</option>
-          <option value="http://v9j.net/?url=">VIP视频解析⑥</option>
-<option value="https://jx.jsonplayer.com/player/?url=">极速解析⑦</option>
-<option value="https://jx.bpba.cc/?url=">稳定解析⑧</option>
+        <div <select id="jk" class="url-c url-text" title="如无法播放请换线">
+  <option value="https://jx.2s0.cn/player/?url=">默认解析端口①</option>
+  <option value="https://jiexi.789jiexi.icu:4433/?url=">VIP端口②</option>
+  <option value="https://bd.jx.cn/?url=">VIP端口③</option>
+  <option value="https://jx.973973.xyz/?url=">VIP端口④</option>
+  <option value="https://jx.xmflv.com/?url=">VIP端口⑤</option>
+  <option value="https://www.ckplayer.vip/jiexi/?url=">VIP端口⑥</option>
+  <option value="https://jx.nnxv.cn/tv.php?url=">VIP端口⑦</option>
+  <option value="https://www.yemu.xyz/?url=">VIP端口⑧</option>
+  <option value="https://www.pangujiexi.com/jiexi/?url=">VIP端口⑨</option>
+  <option value="https://www.playm3u8.cn/jiexi.php?url=">VIP端口⑩</option>
+  <option value="https://jx.77flv.cc/?url=">VIP端口11</option>
+  <option value="https://video.isyour.love/player/getplayer?url=">VIP端口12</option>
+  <option value="https://im1907.top/?jx=">VIP端口13</option>
+</select>
 
-          </select>
         </div>
         <div class="input-group-btn">
           <button type="button" class="btn btn-default btn-play" title="点击开始解析并开始播放" onclick="play()">解析播放</button>
@@ -379,14 +383,13 @@ head.appendChild(script);
 function play() {
   let url = document.getElementById('url').value.trim();
   if (!url) { alert('请输入视频地址！'); return; }
-  // ① 净化：去掉 ? 及后面所有参数
+  // === 关键：去掉尾巴参数 ===
   url = url.split('?')[0];
-  // ② 强制用最新可用接口（直接复制）
-  const jk = 'https://jx.jsonplayer.com/player/?url=';
+  const jk = document.getElementById('jk').value;
   document.getElementById('tittext').innerHTML = url;
   document.getElementById('palybox').src = jk + encodeURIComponent(url);
 }
-</script>
+
 </script>
 <!-- ✅ 打赏作者 - 右上角悬浮 -->
 <div id="reward" style="position:fixed;top:60px;right:15px;z-index:9999;text-align:center;">
