--- a/index.html
+++ b/index.html
@@ -248,7 +248,8 @@ window.addEventListener('DOMContentLoaded',()=>{
     <div class="url-box">
       <div class="input-group">
         <input type="text" id="url" class="form-control url-text" aria-label="Text input with segmented button dropdown" placeholder="请粘贴视频网址>ㅂ<ﾉ ☆" title="请复制你想要看的视频网址，粘贴到此处点击播放即可！">
-        <div <select id="jk" class="url-c url-text" title="如无法播放请换线">
+        <div class="input-group-addon">
+          <select class="url-c url-text" title="如发现视频无法正常播放请尝试更换视频线路！" id="jk">
   <option value="https://jx.2s0.cn/player/?url=">默认解析端口①</option>
   <option value="https://jiexi.789jiexi.icu:4433/?url=">VIP端口②</option>
   <option value="https://bd.jx.cn/?url=">VIP端口③</option>
@@ -381,15 +382,15 @@ head.appendChild(script);
 <script>function fuckyou(){window.close();window.location="about:blank"}function ck(){console.profile();console.profileEnd();if(console.clear){console.clear()};if(typeof console.profiles=="object"){return console.profiles.length>0}}function hehe(){if((window.console&&(console.firebug||console.table&&/firebug/i.test(console.table())))||(typeof opera=='object'&&typeof opera.postError=='function'&&console.profile.length>0)){fuckyou()}if(typeof console.profiles=="object"&&console.profiles.length>0){fuckyou()}}hehe();window.onresize=function(){if((window.outerHeight-window.innerHeight)>200)fuckyou()}</script>
 <script>
 function play() {
-  let url = document.getElementById('url').value.trim();
-  if (!url) { alert('请输入视频地址！'); return; }
-  // === 关键：去掉尾巴参数 ===
-  url = url.split('?')[0];
-  const jk = document.getElementById('jk').value;
-  document.getElementById('tittext').innerHTML = url;
-  document.getElementById('palybox').src = jk + encodeURIComponent(url);
+    var url = document.getElementById('url').value;
+    if (!url) {
+        alert('请输入视频地址！');
+        return;
+    }
+    var jk = document.getElementById('jk').value;
+    document.getElementById('tittext').innerHTML = url;
+    document.getElementById('palybox').src = jk + encodeURIComponent(url);
 }
-
 </script>
 <!-- ✅ 打赏作者 - 右上角悬浮 -->
 <div id="reward" style="position:fixed;top:60px;right:15px;z-index:9999;text-align:center;">
