--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <script src="js/jquery.min.js"></script> 
-  <!-- ✅ 奈飞·极致酷炫（强制覆盖版） -->
+  <!-- ✅ 奈飞·极致酷炫（强制覆盖版）-->
 <style>
 /* ---------- 0. 导航隐形 ---------- */
 header.navbar-fixed-top,
@@ -250,19 +250,18 @@ window.addEventListener('DOMContentLoaded',()=>{
         <input type="text" id="url" class="form-control url-text" aria-label="Text input with segmented button dropdown" placeholder="请粘贴视频网址>ㅂ<ﾉ ☆" title="请复制你想要看的视频网址，粘贴到此处点击播放即可！">
         <div class="input-group-addon">
           <select class="url-c url-text" title="如发现视频无法正常播放请尝试更换视频线路！" id="jk">
-  <option value="https://jx.2s0.cn/player/?url=">默认解析端口①</option>
-  <option value="https://jiexi.789jiexi.icu:4433/?url=">VIP端口②</option>
-  <option value="https://bd.jx.cn/?url=">VIP端口③</option>
-  <option value="https://jx.973973.xyz/?url=">VIP端口④</option>
-  <option value="https://jx.xmflv.com/?url=">VIP端口⑤</option>
-  <option value="https://www.ckplayer.vip/jiexi/?url=">VIP端口⑥</option>
-  <option value="https://jx.nnxv.cn/tv.php?url=">VIP端口⑦</option>
-  <option value="https://www.yemu.xyz/?url=">VIP端口⑧</option>
-  <option value="https://www.pangujiexi.com/jiexi/?url=">VIP端口⑨</option>
-  <option value="https://www.playm3u8.cn/jiexi.php?url=">VIP端口⑩</option>
-  <option value="https://jx.77flv.cc/?url=">VIP端口11</option>
-  <option value="https://video.isyour.love/player/getplayer?url=">VIP端口12</option>
-  <option value="https://im1907.top/?jx=">VIP端口13</option>
+  <option value="https://z1.m1907.top/?jx=" selected>直接搜片名专用</option>
+  <option value="https://jx.xmflv.cc/?url= ">虾米解析</option>
+  <option value="https://jx.2s0.cn/player/?url= ">极速云解析</option>
+  <option value="https://jx.nnxv.cn/tv.php?url= ">七哥解析</option>
+  <option value="https://jx.77flv.cc/?url= ">七七解析</option>
+  <option value="https://jx.playerjy.com/?url= ">jy解析</option>
+  <option value="https://z1.im1907.top/?jx= ">1907解析</option>
+  <option value="https://jx.xymp4.cc/?url= ">咸鱼解析</option>
+  <option value="https://api.quanminjiexi.com/index.php?url= ">全民解析</option>
+  <option value="http://v9j.net/?url= ">智能云解析</option>
+  <option value="//video.isyour.love/player/getplayer?url=">OK解析</option>
+  <option value="//jx.m3u8.tv/jiexi/?url=">无广告视频解析</option>
 </select>
 
         </div>
@@ -303,7 +302,7 @@ var script = document.createElement("script");
 script.type = "text/javascript";
 script.charset = "utf-8";
 head.appendChild(script);
-} else { var loadJs=function(d,a){var c=document.getElementsByTagName("head")[0]||document.head||document.documentElement;var b=document.createElement("script");b.setAttribute("type","text/javascript");b.setAttribute("charset","UTF-8");b.setAttribute("src",d);if(typeof a==="function"){if(window.attachEvent){b.onreadystatechange=function(){var e=b.readyState;if(e==="loaded"||e==="complete"){b.onreadystatechange=null;a()}}}else{b.onload=a}}c.appendChild(b)};loadJs("https://cy-cdn.kuaizhan.com/upload/changyan.js",function(){window.changyan.api.config({appid:appid,conf:conf})}); } })(); </script> </div>
+} else { var loadJs=function(d,a){var c=document.getElementsByTagName("head")[0]||document.head||document.documentElement;var b=document.createElement("script");b.setAttribute("type","text/javascript");b.setAttribute("charset","UTF-8");b.setAttribute("src",d);if(typeof a==="function"){if(window.attachEvent){b.onreadystatechange=function(){var e=b.readyState;if(e==="loaded"||e==="complete"){b.onreadystatechange=null;a()}}}else{b.onload=a}}c.appendChild(b)};loadJs("https://cy-cdn.kuaizhan.com/upload/changyan.js ",function(){window.changyan.api.config({appid:appid,conf:conf})}); } })(); </script> </div>
 </div>
 <div class="container-fluid logo-box">
   <div class="container ">
@@ -316,62 +315,62 @@ head.appendChild(script);
     </div>
     <div class="row">
       <div class="col-xs-4 col-sm-2">
-        <div class="logo-lie"> <a rel="nofollow" href="https://www.iqiyi.com/" target="_blank" title="爱奇艺视频"> <img class="img-responsive" src="img/logo/iqiyilogo.png" alt="爱奇艺视频"> </a> </div>
+        <div class="logo-lie"> <a rel="nofollow" href="https://www.iqiyi.com/ " target="_blank" title="爱奇艺视频"> <img class="img-responsive" src="img/logo/iqiyilogo.png" alt="爱奇艺视频"> </a> </div>
       </div>
       <div class="col-xs-4 col-sm-2 ">
-        <div class="logo-lie"> <a rel="nofollow" href="https://v.qq.com/" target="_blank" title="腾讯视频"> <img class="img-responsive" src="img/logo/qqlogo.png" alt="腾讯视频"> </a> </div>
+        <div class="logo-lie"> <a rel="nofollow" href="https://v.qq.com/ " target="_blank" title="腾讯视频"> <img class="img-responsive" src="img/logo/qqlogo.png" alt="腾讯视频"> </a> </div>
       </div>
       <div class="col-xs-4 col-sm-2 ">
-        <div class="logo-lie"> <a rel="nofollow" href="https://www.youku.com/" target="_blank" title="优酷视频"> <img class="img-responsive" src="img/logo/youkulogo.png" alt="优酷视频"> </a> </div>
+        <div class="logo-lie"> <a rel="nofollow" href="https://www.youku.com/ " target="_blank" title="优酷视频"> <img class="img-responsive" src="img/logo/youkulogo.png" alt="优酷视频"> </a> </div>
       </div>
       <div class="col-xs-4 col-sm-2 ">
-        <div class="logo-lie"> <a rel="nofollow" href="https://www.mgtv.com/" target="_blank" title="芒果视频"> <img class="img-responsive" src="img/logo/hunantvlogo.png"  alt="芒果视频"> </a> </div>
+        <div class="logo-lie"> <a rel="nofollow" href="https://www.mgtv.com/ " target="_blank" title="芒果视频"> <img class="img-responsive" src="img/logo/hunantvlogo.png"  alt="芒果视频"> </a> </div>
       </div>
       <div class="col-xs-4 col-sm-2">
-        <div class="logo-lie"> <a rel="nofollow" href="https://www.le.com/" target="_blank" title="乐视视频"> <img class="img-responsive" src="img/logo/letvlogo.png" alt="乐视视频"> </a> </div>
+        <div class="logo-lie"> <a rel="nofollow" href="https://www.le.com/ " target="_blank" title="乐视视频"> <img class="img-responsive" src="img/logo/letvlogo.png" alt="乐视视频"> </a> </div>
       </div>
       <div class="col-xs-4 col-sm-2">
-        <div class="logo-lie"> <a rel="nofollow" href="https://www.tudou.com" target="_blank" title="土豆视频"> <img class="img-responsive" src="img/logo/tudoulogo.png" alt="土豆视频"> </a> </div>
+        <div class="logo-lie"> <a rel="nofollow" href="https://www.tudou.com " target="_blank" title="土豆视频"> <img class="img-responsive" src="img/logo/tudoulogo.png" alt="土豆视频"> </a> </div>
       </div>
     </div>
     <div class="row">
       <div class="col-xs-4 col-sm-2">
-        <div class="logo-lie"> <a rel="nofollow" href="https://www.baofeng.com/" target="_blank" title="暴风视频"> <img class="img-responsive" src="img/logo/baofeng.png" alt="暴风视频"> </a> </div>
+        <div class="logo-lie"> <a rel="nofollow" href="https://www.baofeng.com/ " target="_blank" title="暴风视频"> <img class="img-responsive" src="img/logo/baofeng.png" alt="暴风视频"> </a> </div>
       </div>
       <div class="col-xs-4 col-sm-2 ">
-        <div class="logo-lie"> <a rel="nofollow" href="https://vip.1905.com/" target="_blank" title="1905电影网"> <img class="img-responsive" src="img/logo/1905logo.png" alt="1905电影网"> </a> </div>
+        <div class="logo-lie"> <a rel="nofollow" href="https://vip.1905.com/ " target="_blank" title="1905电影网"> <img class="img-responsive" src="img/logo/1905logo.png" alt="1905电影网"> </a> </div>
       </div>
       <div class="col-xs-4 col-sm-2 ">
-        <div class="logo-lie"> <a rel="nofollow" href="https://www.kankan.com/" target="_blank" title="看看视频"> <img class="img-responsive" src="img/logo/kankan.png" alt="看看视频"> </a> </div>
+        <div class="logo-lie"> <a rel="nofollow" href="https://www.kankan.com/ " target="_blank" title="看看视频"> <img class="img-responsive" src="img/logo/kankan.png" alt="看看视频"> </a> </div>
       </div>
       <div class="col-xs-4 col-sm-2 ">
-        <div class="logo-lie"> <a rel="nofollow" href="https://www.pptv.com/" target="_blank" title="PPTV聚力"> <img class="img-responsive" src="img/logo/pptv.png" alt="PPTV聚力"> </a> </div>
+        <div class="logo-lie"> <a rel="nofollow" href="https://www.pptv.com/ " target="_blank" title="PPTV聚力"> <img class="img-responsive" src="img/logo/pptv.png" alt="PPTV聚力"> </a> </div>
       </div>
       <div class="col-xs-4 col-sm-2">
-        <div class="logo-lie"> <a rel="nofollow" href="https://www.yinyuetai.com/" target="_blank" title="音悦台MV"> <img class="img-responsive" src="img/logo/yinyuetailogo.png" alt="音悦台MV"> </a> </div>
+        <div class="logo-lie"> <a rel="nofollow" href="https://www.yinyuetai.com/ " target="_blank" title="音悦台MV"> <img class="img-responsive" src="img/logo/yinyuetailogo.png" alt="音悦台MV"> </a> </div>
       </div>
       <div class="col-xs-4 col-sm-2">
-        <div class="logo-lie"> <a rel="nofollow" href="https://www.fun.tv/" target="_blank" title="风行视频"> <img class="img-responsive" src="img/logo/fengxing.png" alt="风行视频"> </a> </div>
+        <div class="logo-lie"> <a rel="nofollow" href="https://www.fun.tv/ " target="_blank" title="风行视频"> <img class="img-responsive" src="img/logo/fengxing.png" alt="风行视频"> </a> </div>
       </div>
     </div>
     <div class="row">
       <div class="col-xs-4 col-sm-2 ">
-        <div class="logo-lie"> <a rel="nofollow" href="https://www.wasu.cn/" target="_blank" title="华数视频"> <img class="img-responsive" src="img/logo/wasulogo.png" alt="华数视频"> </a> </div>
+        <div class="logo-lie"> <a rel="nofollow" href="https://www.wasu.cn/ " target="_blank" title="华数视频"> <img class="img-responsive" src="img/logo/wasulogo.png" alt="华数视频"> </a> </div>
       </div>
       <div class="col-xs-4 col-sm-2 ">
-        <div class="logo-lie"> <a rel="nofollow" href="https://video.sina.com.cn/" target="_blank" title="新浪视频"> <img class="img-responsive" src="img/logo/sinalogo.png" alt="新浪视频"> </a> </div>
+        <div class="logo-lie"> <a rel="nofollow" href="https://video.sina.com.cn/ " target="_blank" title="新浪视频"> <img class="img-responsive" src="img/logo/sinalogo.png" alt="新浪视频"> </a> </div>
       </div>
       <div class="col-xs-4 col-sm-2">
-        <div class="logo-lie"> <a rel="nofollow" href="https://film.sohu.com/" target="_blank" title="搜狐视频"> <img class="img-responsive" src="img/logo/sohulogo.png" alt="搜狐视频"> </a> </div>
+        <div class="logo-lie"> <a rel="nofollow" href="https://film.sohu.com/ " target="_blank" title="搜狐视频"> <img class="img-responsive" src="img/logo/sohulogo.png" alt="搜狐视频"> </a> </div>
       </div>
       <div class="col-xs-4 col-sm-2 ">
-        <div class="logo-lie"> <a rel="nofollow" href="https://tv.cctv.com/" target="_blank" title="央视网"> <img class="img-responsive" src="img/logo/cntvlogo.png" alt="央视网"> </a> </div>
+        <div class="logo-lie"> <a rel="nofollow" href="https://tv.cctv.com/ " target="_blank" title="央视网"> <img class="img-responsive" src="img/logo/cntvlogo.png" alt="央视网"> </a> </div>
       </div>
       <div class="col-xs-4 col-sm-2 ">
-        <div class="logo-lie"> <a rel="nofollow" href="https://www.acfun.cn/" target="_blank" title="Ac弹幕网"> <img class="img-responsive" src="img/logo/acfun.png" alt="Ac弹幕网"> </a> </div>
+        <div class="logo-lie"> <a rel="nofollow" href="https://www.acfun.cn/ " target="_blank" title="Ac弹幕网"> <img class="img-responsive" src="img/logo/acfun.png" alt="Ac弹幕网"> </a> </div>
       </div>
       <div class="col-xs-4 col-sm-2">
-        <div class="logo-lie"> <a rel="nofollow" href="https://www.bilibili.com/" target="_blank" title="哔哩哔哩"> <img class="img-responsive" src="img/logo/bilibili.png" alt="哔哩哔哩"> </a> </div>
+        <div class="logo-lie"> <a rel="nofollow" href="https://www.bilibili.com/ " target="_blank" title="哔哩哔哩"> <img class="img-responsive" src="img/logo/bilibili.png" alt="哔哩哔哩"> </a> </div>
       </div>
     </div>
   </div>
