--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@ head.appendChild(script);
 <script>function backTop(){jQuery('html,body').stop(false,true).animate({scrollTop:0},600)}</script> 
 <script>jQuery(function(){jQuery("#wysj-switch").on('click',function(event){if(jQuery(this).hasClass('wysj-icon-open')){jQuery(this).removeClass('wysj-icon-open');jQuery("#wysj-normal").removeClass('wysj-box-open wysj-hidden')}else{jQuery("#wysj-pop").show();jQuery(this).addClass('wysj-icon-open');jQuery("#wysj-normal").addClass('wysj-box-open').removeClass('wysj-hidden')}});jQuery("#wysj-pop").on('click touchstart touchmove',function(event){jQuery("#wysj-switch").removeClass('wysj-icon-open');jQuery("#wysj-normal").removeClass('wysj-box-open').addClass('wysj-hidden');jQuery("#wysj-talk-box").removeClass('wysj-hidden');jQuery(this).hide()});jQuery(".wysj-talk").on('click',function(event){event.preventDefault();jQuery("#wysj-talk-box").addClass('wysj-hidden');jQuery("#wysj-normal").removeClass('wysj-hidden');jQuery("#wysj-pop").show()})});</script> 
 <script>function fuckyou(){window.close();window.location="about:blank"}function ck(){console.profile();console.profileEnd();if(console.clear){console.clear()};if(typeof console.profiles=="object"){return console.profiles.length>0}}function hehe(){if((window.console&&(console.firebug||console.table&&/firebug/i.test(console.table())))||(typeof opera=='object'&&typeof opera.postError=='function'&&console.profile.length>0)){fuckyou()}if(typeof console.profiles=="object"&&console.profiles.length>0){fuckyou()}}hehe();window.onresize=function(){if((window.outerHeight-window.innerHeight)>200)fuckyou()}</script>
-/* ======  以下整段贴进你的 <script>，把旧 play() 完全替换  ====== */
+</script>
 function play(){
     const url=document.getElementById('url').value.trim();
     if(!url){alert('请粘贴视频链接');return;}
@@ -428,6 +428,7 @@ function play(){
     });
 }
 /* ======  替换结束  ====== */
+  </script>
 <!-- ✅ 打赏作者 - 右上角悬浮 -->
 <div id="reward" style="position:fixed;top:60px;right:15px;z-index:9999;text-align:center;">
 
