--- a/index.html
+++ b/index.html
@@ -250,9 +250,7 @@ window.addEventListener('DOMContentLoaded',()=>{
         <input type="text" id="url" class="form-control url-text" aria-label="Text input with segmented button dropdown" placeholder="请粘贴视频网址>ㅂ<ﾉ ☆" title="请复制你想要看的视频网址，粘贴到此处点击播放即可！">
         <div class="input-group-addon">
           <select class="url-c url-text" title="如发现视频无法正常播放请尝试更换视频线路！" id="jk">
-  <option value="https://z1.m1907.top/?jx=" selected>直接搜片名专用</option>
-  <option value="https://jx.xmflv.cc/?url= ">虾米解析</option>
-  <option value="https://jx.2s0.cn/player/?url= ">极速云解析</option>
+  <option value="https://jiexi.789jiexi.icu:4433/?url=">极速云解析</option>
   <option value="https://jx.nnxv.cn/tv.php?url= ">七哥解析</option>
   <option value="https://jx.77flv.cc/?url= ">七七解析</option>
   <option value="https://jx.playerjy.com/?url= ">jy解析</option>
