--- a/index.html
+++ b/index.html
@@ -250,16 +250,26 @@ window.addEventListener('DOMContentLoaded',()=>{
         <input type="text" id="url" class="form-control url-text" aria-label="Text input with segmented button dropdown" placeholder="请粘贴视频网址>ㅂ<ﾉ ☆" title="请复制你想要看的视频网址，粘贴到此处点击播放即可！">
         <div class="input-group-addon">
           <select class="url-c url-text" title="如发现视频无法正常播放请尝试更换视频线路！" id="jk">
-  <option value="https://jiexi.789jiexi.icu:4433/?url=">极速云解析</option>
-  <option value="https://jx.nnxv.cn/tv.php?url= ">七哥解析</option>
-  <option value="https://jx.77flv.cc/?url= ">七七解析</option>
-  <option value="https://jx.playerjy.com/?url= ">jy解析</option>
-  <option value="https://z1.im1907.top/?jx= ">1907解析</option>
-  <option value="https://jx.xymp4.cc/?url= ">咸鱼解析</option>
-  <option value="https://api.quanminjiexi.com/index.php?url= ">全民解析</option>
-  <option value="http://v9j.net/?url= ">智能云解析</option>
-  <option value="//video.isyour.love/player/getplayer?url=">OK解析</option>
-  <option value="//jx.m3u8.tv/jiexi/?url=">无广告视频解析</option>
+<script>
+// 手机专属线路名称
+const lines = [
+    {name:"默认VIP端口", url:"https://jx.2s0.cn/player/?url="},
+    {name:"VIP端口①", url:"https://jiexi.789jiexi.icu:4433/?url="},
+    {name:"VIP端口②", url:"https://bd.jx.cn/?url="},
+    {name:"VIP端口③", url:"https://jx.973973.xyz/?url="},
+    {name:"VIP端口④", url:"https://jx.xmflv.com/?url="},
+    {name:"VIP端口⑤", url:"https://www.ckplayer.vip/jiexi/?url="},
+    {name:"VIP端口⑥", url:"https://jx.nnxv.cn/tv.php?url="},
+    {name:"VIP端口⑦", url:"https://www.yemu.xyz/?url="},
+    {name:"VIP端口⑧", url:"https://www.pangujiexi.com/jiexi/?url="},
+    {name:"VIP端口⑨", url:"https://www.playm3u8.cn/jiexi.php?url="},
+    {name:"VIP端口⑩", url:"https://jx.77flv.cc/?url="},
+    {name:"VIP端口11", url:"https://video.isyour.love/player/getplayer?url="},
+    {name:"VIP端口12", url:"https://im1907.top/?jx="},
+    {name:"VIP端口13", url:"https://jx.hls.one/?url="}
+];
+let currentUrl = lines[0].url;
+
 </select>
 
         </div>
