--- a/index.html
+++ b/index.html
@@ -250,26 +250,19 @@ window.addEventListener('DOMContentLoaded',()=>{
         <input type="text" id="url" class="form-control url-text" aria-label="Text input with segmented button dropdown" placeholder="请粘贴视频网址>ㅂ<ﾉ ☆" title="请复制你想要看的视频网址，粘贴到此处点击播放即可！">
         <div class="input-group-addon">
           <select class="url-c url-text" title="如发现视频无法正常播放请尝试更换视频线路！" id="jk">
-<script>
-// 手机专属线路名称
-const lines = [
-    {name:"默认VIP端口", url:"https://jx.2s0.cn/player/?url="},
-    {name:"VIP端口①", url:"https://jiexi.789jiexi.icu:4433/?url="},
-    {name:"VIP端口②", url:"https://bd.jx.cn/?url="},
-    {name:"VIP端口③", url:"https://jx.973973.xyz/?url="},
-    {name:"VIP端口④", url:"https://jx.xmflv.com/?url="},
-    {name:"VIP端口⑤", url:"https://www.ckplayer.vip/jiexi/?url="},
-    {name:"VIP端口⑥", url:"https://jx.nnxv.cn/tv.php?url="},
-    {name:"VIP端口⑦", url:"https://www.yemu.xyz/?url="},
-    {name:"VIP端口⑧", url:"https://www.pangujiexi.com/jiexi/?url="},
-    {name:"VIP端口⑨", url:"https://www.playm3u8.cn/jiexi.php?url="},
-    {name:"VIP端口⑩", url:"https://jx.77flv.cc/?url="},
-    {name:"VIP端口11", url:"https://video.isyour.love/player/getplayer?url="},
-    {name:"VIP端口12", url:"https://im1907.top/?jx="},
-    {name:"VIP端口13", url:"https://jx.hls.one/?url="}
-];
-let currentUrl = lines[0].url;
-
+  <option value="https://jiexi.789jiexi.icu:4433/?url=">默认解析端口①</option>
+  <option value="https://bd.jx.cn/?url=">VIP端口②</option>
+  <option value="https://bd.jx.cn/?url= ">VIP端口③</option>
+  <option value="https://jx.973973.xyz/?url= ">VIP端口④</option>
+  <option value="https://jx.xmflv.com/?url= ">VIP端口⑤</option>
+  <option value="https://www.ckplayer.vip/jiexi/?url= ">VIP端口⑥</option>
+  <option value="https://jx.nnxv.cn/tv.php?url= ">VIP端口⑦</option>
+  <option value="https://www.yemu.xyz/?url= ">VIP端口⑧</option>
+  <option value="https://www.pangujiexi.com/jiexi/?url= ">VIP端口⑨</option>
+  <option value="https://www.playm3u8.cn/jiexi.php?url= ">VIP端口⑩</option>
+  <option value="https://jx.77flv.cc/?url= ">VIP端口11</option>
+  <option value="https://video.isyour.love/player/getplayer?url= ">VIP端口12</option>
+  <option value="https://im1907.top/?jx= ">VIP端口13</option>
 </select>
 
         </div>
