--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
             padding:14px 18px;box-shadow:0 15px 40px rgba(0,0,0,0.6);
             margin:25px 15px 20px;gap:12px;
             transition:all 0.4s;
+            flex-wrap:nowrap!important;
         }
         .all-in-one-bar:focus-within{
             border-color:var(--primary);
@@ -439,3 +440,4 @@ btn.onclick=()=>toggleReward(true);close.onclick=mask.onclick=()=>toggleReward(f
 <!-- ===== 打赏补丁结束 ===== -->
 </body>
 </html>
+
