--- a/index.html
+++ b/index.html
@@ -297,11 +297,8 @@ window.addEventListener('load', () => {
 const lines = [
     {name:"默认VIP", url:"https://jx.xmflv.cc/?url="},
     {name:"线路①", url:"https://jx.2s0.cn/player/?url="},
-    {name:"线路②", url:"https://jx.nnxv.cn/tv.php?url="},
-    {name:"线路③", url:"//jx.m3u8.tv/jiexi/?url="},
-    {name:"线路④", url:"https://jx.playerjy.com/?url="},
-    {name:"线路⑤", url:"//video.isyour.love/player/getplayer?url="},
-    {name:"线路⑥", url:"https://jx.m3u8.tv/jiexi/?url="}
+    {name:"线路②", url:"https://jx.nnxv.cn/tv.php?url="},
+    {name:"线路⑥", url:"https://j.m3.tv/jiexi/?url="}
 ];
 let currentUrl = lines[0].url;
 let currentPlayUrl = '';
